trying to avoid overflow

--- a/css/style_input.css
+++ b/css/style_input.css
@@ -107,4 +107,12 @@ p, h1, span, label, button {
     justify-content: space-between;
 }
 
- 
+#resultEncrypt { 
+    /* margin: 4px, 4px;  */
+    /* padding: 4px;  */
+    /* background-color: #08c708;  */
+    /* width: 300px;  */
+    overflow-x: auto; 
+    overflow-y: hidden; 
+    white-space: nowrap; 
+} 
